@@ -40,6 +40,8 @@ CHANGES
 
 - Make the rule: path for add_route should start with slash
 
+- Don't process request finishing by low-level server on closed event loop
+
 
 0.16.5 (06-13-2015)
 -------------------
